Fix missing OfflinePageItem file_size equality check.

Bug: 833008
Change-Id: Ie97bd09ba7aa65bf56532790ee0200ae72fd5383
Reviewed-on: https://chromium-review.googlesource.com/1015970
Reviewed-by: Yafei Duan <romax@chromium.org>
Commit-Queue: Carlos Knippschild <carlosk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551546}
Former-commit-id: 7326e143a531a05bac12f8c640cbf6ab91c741ac